<resources>
    <string name="app_name">ACT Networking ACADEMY</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password_hoi">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="change_information">Change Information</string>
    <string name="information">Information</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
    <string name="write_a_message">Write a message...</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="confirm_password">Confirm password</string>
    <string name="connection_errors">Connection errors!</string>
    <string name="incorrect_information">Incorrect information!</string>
    <string name="click_back">Click again to exit!</string>
    <string name="requires_network">Requires network!</string>
    <string name="connect_network_success">Connect network success</string>
    <string name="email_cannot_be_empty">Email cannot be empty!</string>
    <string name="password_cannot_be_blank">Password cannot be blank!</string>
    <string name="new_password_cannot_be_blank">New password cannot be blank!</string>
    <string name="confirm_password_cannot_be_blank">Confirm password cannot be blank!</string>
    <string name="register_success">Register Success</string>
    <string name="data_cannot_be_empty">Data cannot be empty!</string>
    <string name="name_cannot_be_empty">Name cannot be empty!</string>
    <string name="gender_cannot_be_empty">Gender cannot be blank!</string>
    <string name="date_of_birth_cannot_be_empty">Date of birth cannot be blank!</string>
    <string name="phone_cannot_be_empty">Phone cannot be blank!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="old_pass_not_same">Old password not same!</string>
    <string name="change_ok">Change Succes!</string>
    <string name="confirm_pass_not_same">Confirm password not same!</string>
    <string name="reset_password">Reset Password</string>
</resources>
