<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo_app"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/blue_app"
            android:textStyle="bold"
            android:layout_marginBottom="28dp"
            android:textSize="38dp"/>

        <EditText
            android:id="@+id/edtTaiKhoan"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:textSize="22dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:background="@drawable/bg_edt_sign"
            android:layout_marginBottom="18dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:textSize="22dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:background="@drawable/bg_edt_sign"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="22sp"
            android:textColor="#1B1B1B"
            android:text="Remember "/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDangNhap"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_btn_log_in"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnQuayLai"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_log_in_quay_lai"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtQuenMK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/blue_app"
            android:gravity="center"
            android:text="@string/forgot_password_hoi"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="14sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/blue_app"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>