<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ChangePassActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/blue_app"
            android:textStyle="bold"
            android:layout_marginBottom="28dp"
            android:textSize="38dp"/>

        <RelativeLayout
            android:id="@+id/llOldPass"
            android:layout_width="match_parent"
            android:layout_marginBottom="18dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtMatKhauCu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_sign"
                android:hint="@string/old_password"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/white"
                android:textColor="@color/blue_app"
                android:paddingHorizontal="4dp"
                android:text="@string/old_password"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="18dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_sign"
                android:hint="@string/new_password"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/white"
                android:paddingHorizontal="4dp"
                android:text="@string/new_password"
                android:textColor="@color/blue_app" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="18dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtXacNhanMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_sign"
                android:hint="@string/confirm_password"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/white"
                android:paddingHorizontal="4dp"
                android:text="@string/confirm_password"
                android:textColor="@color/blue_app" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDoiMk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_log_in"
            android:padding="10dp"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnQuayLai"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_log_in_quay_lai"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>