<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".infor.ChangeInformationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:padding="12dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/change_information"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/txtSave"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_margin="6dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_log_in"
            android:text="@string/save"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="12dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgAvt"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:civ_border_color="#595959"
                app:civ_border_width="2dp"
                android:src="@drawable/ic_default_profile"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="18dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edt_sign"
                    android:hint="@string/name"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/white"
                    android:textColor="@color/blue_app"
                    android:paddingHorizontal="4dp"
                    android:text="@string/name"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="18dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edt_sign"
                    android:hint="@string/job"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/white"
                    android:paddingHorizontal="4dp"
                    android:text="@string/job"
                    android:textColor="@color/blue_app" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="18dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/edtGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edt_sign"
                    android:hint="@string/gender"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColor="@color/black"
                    android:textSize="22sp">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbNam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/black"
                            android:checked="true"
                            android:text="@string/male"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:id="@+id/rbNu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/black"
                            android:text="@string/female"
                            android:textColor="@color/black" />

                    </RadioGroup>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/white"
                    android:textColor="@color/blue_app"
                    android:paddingHorizontal="4dp"
                    android:text="@string/gender"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="18dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtNgaySinh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edt_sign"
                    android:hint="@string/date_of_birth"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/white"
                    android:paddingHorizontal="4dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/blue_app" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="18dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edt_sign"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/white"
                    android:textColor="@color/blue_app"
                    android:paddingHorizontal="4dp"
                    android:text="@string/phone"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="18dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edt_sign"
                    android:hint="@string/address"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/white"
                    android:textColor="@color/blue_app"
                    android:paddingHorizontal="4dp"
                    android:text="@string/address"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>